--- a/1-2.html
+++ b/1-2.html
@@ -8,10 +8,6 @@
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev_index.gif" width="300">
-  <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
     <a href="1.html"><li>Career</li></a>
@@ -29,6 +25,11 @@
     <a href="1-4.html"><li>TV</li></a>
     <a href="1-5.html"><li>Concert</li></a>
   </ul>
+
+  <p><h3>Play</h3>
+  타지마할의 근위병 GUARDS AT TAJ 2017 <strong>휴마윤</strong>
+  <br>안티고네 ANTIGONE 2016 <strong>경비병3</strong>
+  <br>유령 GHOSTS 2014 <strong>만데스 목사</strong></p>
 
 </body>
 </html>
