--- a/1-3.html
+++ b/1-3.html
@@ -8,10 +8,6 @@
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev_index.gif" width="300">
-  <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
     <a href="1.html"><li>Career</li></a>
@@ -29,6 +25,9 @@
     <a href="1-4.html"><li>TV</li></a>
     <a href="1-5.html"><li>Concert</li></a>
   </ul>
+
+  <p><h3>Opera</h3>
+  리타 RITA 2014-2016 <strong>가스파로</strong></p>
 
 </body>
 </html>
