--- a/1-4.html
+++ b/1-4.html
@@ -8,10 +8,6 @@
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev_index.gif" width="300">
-  <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
     <a href="1.html"><li>Career</li></a>
@@ -29,6 +25,13 @@
     <a href="1-4.html"><li>TV</li></a>
     <a href="1-5.html"><li>Concert</li></a>
   </ul>
+
+  <p><h3>TV</h3>
+  <strong>그린 마더스 클럽(JTBC DRAMA) - 재웅 역</strong> 2022
+  <br><strong>로또 싱어 (MBN) - 최종 승자</strong> 2020-2021
+  <br><strong>세계문화기행 - 셰익스피어 편 (EBS)</strong> 2017
+  <br><strong>SNL KOREA – GUEST SINGER (tvN)</strong> 2010
+  <br><strong>남자의 자격 – 합창단 편(KBS)</strong> 2009</p>
 
 </body>
 </html>
