--- a/2.html
+++ b/2.html
@@ -10,7 +10,7 @@
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
   <a href="https://www.zevchoi.com/home"
   target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev1.gif" width="300">
+  <br><br><img src="Zev_index.gif" width="300">
   <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
