--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
   <a href="https://www.zevchoi.com/home"
   target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev1.gif" width="300">
+  <br><br><img src="Zev_index.gif" width="300">
   <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
@@ -21,7 +21,7 @@
 
   <h2 style="margin-top:45px;">Contact</h2>
   ​포킥스 엔터테인먼트 For Kyyks Entertainment
-  <br>경기도 성남시 분당구 황새울로335번길 10, 멜로즈프라자 570호
+  <br>경기도 성남시 분당구 황새울로 335번길 10, 멜로즈프라자 570호
   <br>(031)701-5258
   <br>kyyker@naver.com
 
