--- a/1-1-20.html
+++ b/1-1-20.html
@@ -4,6 +4,17 @@
 <head>
   <title>ZEV - Career</title>
   <meta charset="utf-8">
+  <p>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCNGH3SHSV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VCNGH3SHSV');
+    </script>
+  </p>
 </head>
 
 <body>
