--- a/1.html
+++ b/1.html
@@ -15,6 +15,14 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+
+  <style>
+    a {
+      color: black;
+      text-decoration: none;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -25,7 +33,7 @@
   <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
-    <a href="1.html"><li>Career</li></a>
+    <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
     <a href="2.html"><li>Awards</li></a>
     <a href="3.html"><li>Contact</li></a>
   </ol>
@@ -79,6 +87,6 @@
     </script>
     <!--End of Tawk.to Script-->
   </p>
-  
+
 </body>
 </html>
