--- a/1-2.html
+++ b/1-2.html
@@ -31,16 +31,56 @@
 
   <ul>
     <a href="1-1.html"><li>Musical</li></a>
-    <a href="1-2.html"><li>Play</li></a>
+    <a href="1-2.html" style="color:red"><li>Play</li></a>
     <a href="1-3.html"><li>Opera</li></a>
     <a href="1-4.html"><li>TV</li></a>
     <a href="1-5.html"><li>Concert</li></a>
   </ul>
 
   <p><h3>Play</h3>
-  타지마할의 근위병 GUARDS AT TAJ 2017 <strong>휴마윤</strong>
-  <br>안티고네 ANTIGONE 2016 <strong>경비병3</strong>
-  <br>유령 GHOSTS 2014 <strong>만데스 목사</strong></p>
+    타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役
+    <br>안티고네 ANTIGONE 2016 경비병3 役
+    <br>유령 GHOSTS 2014 만데스 목사 役
+  </p>
+
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://all-about-zev.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+
+  <p>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/63161e2c37898912e96751d8/1gc76bo75';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </p>
+
 
 </body>
 </html>
