--- a/1-4.html
+++ b/1-4.html
@@ -33,16 +33,54 @@
     <a href="1-1.html"><li>Musical</li></a>
     <a href="1-2.html"><li>Play</li></a>
     <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html"><li>TV</li></a>
+    <a href="1-4.html" style="color:red"><li>TV</li></a>
     <a href="1-5.html"><li>Concert</li></a>
   </ul>
 
   <p><h3>TV</h3>
-  <strong>그린 마더스 클럽(JTBC DRAMA) - 재웅 역</strong> 2022
+  <strong>그린 마더스 클럽(JTBC DRAMA) - 재웅 役</strong> 2022
   <br><strong>로또 싱어 (MBN) - 최종 승자</strong> 2020-2021
   <br><strong>세계문화기행 - 셰익스피어 편 (EBS)</strong> 2017
   <br><strong>SNL KOREA – GUEST SINGER (tvN)</strong> 2010
   <br><strong>남자의 자격 – 합창단 편(KBS)</strong> 2009</p>
+
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://all-about-zev.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+
+  <p>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/63161e2c37898912e96751d8/1gc76bo75';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </p>
 
 </body>
 </html>
