--- a/2.html
+++ b/2.html
@@ -15,6 +15,14 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+
+  <style>
+    a {
+      color:black;
+      text-decoration: none;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -26,7 +34,7 @@
 
   <ol>
     <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
+    <a href="2.html" style="color:red;text-decoration:underline;"><li>Awards</li></a>
     <a href="3.html"><li>Contact</li></a>
   </ol>
 
