--- a/3.html
+++ b/3.html
@@ -15,6 +15,14 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+
+  <style>
+    a {
+      color:black;
+      text-decoration:none;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -27,7 +35,7 @@
   <ol>
     <a href="1.html"><li>Career</li></a>
     <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
+    <a href="3.html" style="color:red;text-decoration:underline;"><li>Contact</li></a>
   </ol>
 
   <h2 style="margin-top:45px;">Contact</h2>
