--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+
+  <style>
+    a {
+      color:black;
+      text-decoration:none;
+    }
+    h1 {
+      font-size:60px;
+      text-align:center;
+    }
+  </style>
+
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
   <a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
+  target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
   <br><br><img src="Zev_index.gif" width="300">
-  <p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4gYKzoF1h0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
   <br>date of Birth: <strong>1985.04.29</strong>
 
   <ol>
