--- a/1-2.html
+++ b/1-2.html
@@ -15,6 +15,15 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <style>
+    h1 {
+      font-size:60px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,9 +47,11 @@
   </ul>
 
   <p><h3>Play</h3>
-    타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役
-    <br>안티고네 ANTIGONE 2016 경비병3 役
-    <br>유령 GHOSTS 2014 만데스 목사 役
+    <ul>
+      <li>타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役</li>
+      <li>안티고네 ANTIGONE 2016 경비병3 役</li>
+      <li>유령 GHOSTS 2014 만데스 목사 役</li>
+    </ul>
   </p>
 
   <p>
