--- a/1-4.html
+++ b/1-4.html
@@ -15,6 +15,15 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <style>
+    h1 {
+      font-size:60px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,11 +47,14 @@
   </ul>
 
   <p><h3>TV</h3>
-  <strong>그린 마더스 클럽(JTBC DRAMA) - 재웅 役</strong> 2022
-  <br><strong>로또 싱어 (MBN) - 최종 승자</strong> 2020-2021
-  <br><strong>세계문화기행 - 셰익스피어 편 (EBS)</strong> 2017
-  <br><strong>SNL KOREA – GUEST SINGER (tvN)</strong> 2010
-  <br><strong>남자의 자격 – 합창단 편(KBS)</strong> 2009</p>
+    <ul>
+      <li>그린 마더스 클럽(JTBC DRAMA) - 재웅 役 2022</li>
+      <li>로또 싱어 (MBN) - 최종 승자 2020-2021</li>
+      <li>세계문화기행 - 셰익스피어 편 (EBS) 2017</li>
+      <li>SNL KOREA – GUEST SINGER (tvN) 2010</li>
+      <li>남자의 자격 – 합창단 편(KBS) 2009</li>
+    </ul>
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
