--- a/1.html
+++ b/1.html
@@ -21,16 +21,30 @@
       color: black;
       text-decoration: none;
     }
+    h1 {
+      font-size:60px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+
+    ol {
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:30px;
+    }
+    body {
+      margin:0;
+    }
   </style>
 
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">공식홈페이지 바로가기</a>
-  <br><br><img src="Zev_index.gif" width="300">
-  <br>date of Birth: <strong>1985.04.29</strong>
+  <a href="https://www.zevchoi.com/home">
 
   <ol>
     <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
