--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     h1 {
       font-size:60px;
       text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    body {
+      margin:0;
     }
   </style>
 
@@ -31,7 +37,7 @@
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home"
+  <br><br><a href="https://www.zevchoi.com/home"
   target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
   <br><br><img src="Zev_index.gif" width="300">
   <br>date of Birth: <strong>1985.04.29</strong>
