--- a/1-1.html
+++ b/1-1.html
@@ -21,6 +21,13 @@
       color:black;
       text-decoration:none;
     }
+    h1 {
+      font-size:60px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
   </style>
 
 </head>
