--- a/1-3.html
+++ b/1-3.html
@@ -15,6 +15,15 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <style>
+    h1 {
+      font-size:60px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,7 +47,9 @@
   </ul>
 
   <p><h3>Opera</h3>
-    <a href="1-3-1.html">리타 RITA 2014-2016 가스파로 役</a>
+    <ul>
+      <li><a href="1-3-1.html">리타 RITA 2014-2016 가스파로 役</a></li>
+    </ul>
   </p>
 
   <p>
