--- a/1-4.html
+++ b/1-4.html
@@ -15,46 +15,43 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-  <style>
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-  </style>
+
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
+  <div id="grid">
+    <div id="index">
+      <ol>
+        <a href="1.html"><li>Career</li></a>
+        <a href="2.html"><li>Awards</li></a>
+        <a href="3.html"><li>Contact</li></a>
+      </ol>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
+      <h2 style="margin-top:45px;">Career</h2>
 
-  <h2 style="margin-top:45px;">Career</h2>
-  <u>since 2009.01.09</u>
+      <ul>
+        <a href="1-1.html"><li>Musical</li></a>
+        <a href="1-2.html"><li>Play</li></a>
+        <a href="1-3.html"><li>Opera</li></a>
+        <a href="1-4.html" style="color:red"><li>TV</li></a>
+        <a href="1-5.html"><li>Concert</li></a>
+      </ul>
+    </div>
 
-  <ul>
-    <a href="1-1.html"><li>Musical</li></a>
-    <a href="1-2.html"><li>Play</li></a>
-    <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html" style="color:red"><li>TV</li></a>
-    <a href="1-5.html"><li>Concert</li></a>
-  </ul>
-
-  <p><h3>TV</h3>
-    <ul>
-      <li>그린 마더스 클럽(JTBC DRAMA) - 재웅 役 2022</li>
-      <li>로또 싱어 (MBN) - 최종 승자 2020-2021</li>
-      <li>세계문화기행 - 셰익스피어 편 (EBS) 2017</li>
-      <li>SNL KOREA – GUEST SINGER (tvN) 2010</li>
-      <li>남자의 자격 – 합창단 편(KBS) 2009</li>
-    </ul>
-  </p>
+    <div id="list">
+      <p><h3>TV</h3>
+        <ul>
+          <li>그린 마더스 클럽(JTBC DRAMA) - 재웅 役 2022</li>
+          <li>로또 싱어 (MBN) - 최종 승자 2020-2021</li>
+          <li>세계문화기행 - 셰익스피어 편 (EBS) 2017</li>
+          <li>SNL KOREA – GUEST SINGER (tvN) 2010</li>
+          <li>남자의 자격 – 합창단 편(KBS) 2009</li>
+        </ul>
+      </p>
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
