--- a/1-5.html
+++ b/1-5.html
@@ -15,46 +15,42 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-  <style>
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-  </style>
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
+    <div id="grid">
+      <div id="index">
+        <ol>
+          <a href="1.html"><li>Career</li></a>
+          <a href="2.html"><li>Awards</li></a>
+          <a href="3.html"><li>Contact</li></a>
+        </ol>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
+        <h2 style="margin-top:45px;">Career</h2>
 
-  <h2 style="margin-top:45px;">Career</h2>
-  <u>since 2009.01.09</u>
+        <ul>
+          <a href="1-1.html"><li>Musical</li></a>
+          <a href="1-2.html"><li>Play</li></a>
+          <a href="1-3.html"><li>Opera</li></a>
+          <a href="1-4.html"><li>TV</li></a>
+          <a href="1-5.html" style="color:red"><li>Concert</li></a>
+        </ul>
+      </div>
 
-  <ul>
-    <a href="1-1.html"><li>Musical</li></a>
-    <a href="1-2.html"><li>Play</li></a>
-    <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html"><li>TV</li></a>
-    <a href="1-5.html" style="color:red"><li>Concert</li></a>
-  </ul>
-
-  <p><h3>Concert</h3>
-    <ul>
-      <li>최재림 콘서트 - MONDAY OFF! 2021</li>
-      <li>한류 콘서트 vol.1 (도쿄 긴자 야마하 홀) 2019</li>
-      <li>THE VOICE - 최재림을 듣다 2019</li>
-      <li>CHOI JAERIM CONCERT (도쿄 히라츠카홀) 2018</li>
-      <li>CHOI JAERIM CONCERT (도쿄 FM HALL) 2016</li>
-    </ul>
-  </p>
+    <div id="list">
+      <p><h3>Concert</h3>
+        <ul>
+          <li>최재림 콘서트 - MONDAY OFF! 2021</li>
+          <li>한류 콘서트 vol.1 (도쿄 긴자 야마하 홀) 2019</li>
+          <li>THE VOICE - 최재림을 듣다 2019</li>
+          <li>CHOI JAERIM CONCERT (도쿄 히라츠카홀) 2018</li>
+          <li>CHOI JAERIM CONCERT (도쿄 FM HALL) 2016</li>
+        </ul>
+      </p>
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
