--- a/2.html
+++ b/2.html
@@ -16,47 +16,26 @@
     </script>
   </p>
 
-  <style>
-    a {
-      color:black;
-      text-decoration: none;
-    }
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-    ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0;
-      padding:30px;
-    }
-    body {
-      margin:0;
-    }
-  </style>
-
+  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home">
+  <div id="grid">
+    <ol>
+      <a href="1.html"><li>Career</li></a>
+      <a href="2.html" style="color:red;text-decoration:underline;"><li>Awards</li></a>
+      <a href="3.html"><li>Contact</li></a>
+    </ol>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html" style="color:red;text-decoration:underline;"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
-
-  <h2 style="margin-top:45px;">Awards</h2>
-  제16회 DIMF 어워즈 올해의 스타상 2022 시카고
-  <br>제6회 한국뮤지컬어워즈 남우조연상 2022 시카고
-  <br>제3회 한국뮤지컬어워즈 남우주연상 2019 마틸다
-  <br>제6회 대한민국 예술문화인상 뮤지컬 부문 2018
-
+    <div id="content">
+      <h2>Awards</h2>
+      제16회 DIMF 어워즈 올해의 스타상 2022 시카고
+      <br>제6회 한국뮤지컬어워즈 남우조연상 2022 시카고
+      <br>제3회 한국뮤지컬어워즈 남우주연상 2019 마틸다
+      <br>제6회 대한민국 예술문화인상 뮤지컬 부문 2018
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
