--- a/index.html
+++ b/index.html
@@ -31,22 +31,27 @@
     body {
       margin:0;
     }
+    #main {
+      padding-left:30px;
+      padding-top:30px
+    }
   </style>
 
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <br><br><a href="https://www.zevchoi.com/home"
-  target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
-  <br><br><img src="Zev_index.gif" width="300">
-  <br>date of Birth: <strong>1985.04.29</strong>
+  <div id="main">
+    <a href="https://www.zevchoi.com/home" target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
+    <br><br><img src="Zev_index.gif" width="300">
+    <br><br>date of Birth: <strong>1985.04.29</strong>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
+    <ol>
+      <a href="1.html"><li>Career</li></a>
+      <a href="2.html"><li>Awards</li></a>
+      <a href="3.html"><li>Contact</li></a>
+    </ol>
+  </div>
 
 <p>
   <div id="disqus_thread"></div>
