--- a/1-1.html
+++ b/1-1.html
@@ -16,73 +16,63 @@
     </script>
   </p>
 
-  <style>
-    a {
-      color:black;
-      text-decoration:none;
-    }
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-  </style>
-
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
+  <div id="grid">
+    <div id="index">
+      <ol>
+        <a href="1.html"><li>Career</li></a>
+        <a href="2.html"><li>Awards</li></a>
+        <a href="3.html"><li>Contact</li></a>
+      </ol>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
+      <h2 style="margin-top:45px;">Career</h2>
+      <ul>
+        <a href="1-1.html" style="color:red"><li>Musical</li></a>
+        <a href="1-2.html"><li>Play</li></a>
+        <a href="1-3.html"><li>Opera</li></a>
+        <a href="1-4.html"><li>TV</li></a>
+        <a href="1-5.html"><li>Concert</li></a>
+      </ul>
+    </div>
 
-  <h2 style="margin-top:45px;">Career</h2>
-  <u>since 2009.01.09</u>
-
-  <ul>
-    <a href="1-1.html" style="color:red"><li>Musical</li></a>
-    <a href="1-2.html"><li>Play</li></a>
-    <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html"><li>TV</li></a>
-    <a href="1-5.html"><li>Concert</li></a>
-  </ul>
-
-  <p><h3>Musical</h3>
-    <ul>
-      <li><a href="1-1-28.html">마틸다 MATILDA 2022 트런치불 役</a></a></li>
-      <li><a href="1-1-27.html">킹키 부츠 KINKY BOOTS 2022 롤라 役</a></a></li>
-      <li><a href="1-1-26.html">아이다 AIDA 2022 라다메스 役</a></a></li>
-      <li><a href="1-1-25.html">썸씽 로튼 SOMETHING ROTTEN 2022 셰익스피어 役</a></a></li>
-      <li><a href="1-1-24.html">하데스타운 HADESTOWN 2021 헤르메스 役</a></a></li>
-      <li><a href="1-1-23.html">시카고 CHICAGO 2021 빌리 플린 役</a></a></li>
-      <li><a href="1-1-22.html">젠틀맨스 가이드 GENTLEMAN'S GUIDE_TO LOVE AND MURDER 2020 다이스퀴스 役</a></a></li>
-      <li><a href="1-1-21.html">에어포트 베이비 AIRPORT BABY 2020 조쉬 코헨 役</a></a></li>
-      <li><a href="1-1-20.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></a></li>
-      <li><a href="1-1-19.html">킹키 부츠 KINKY BOOTS 2019 롤라 役</a></a></li>
-      <li><a href="1-1-18.html">아이다 AIDA 2019 라다메스 役</a></li>
-      <li><a href="1-1-17.html">시티 오브 엔젤 CITY OF ANGELS 2019 스타인 役</a></li>
-      <li><a href="1-1-16.html">마틸다 MATILDA 2018-2019 트런치불 役</a></li>
-      <li><a href="1-1-15.html">노트르담 드 파리 NOTRE-DAME DE PARIS 2018-2019 그랭구와르 役</a></li>
-      <li><a href="1-1-14.html">킹키 부츠 KINKY BOOTS 2017-2018 ​롤라 役</a></li>
-      <li><a href="1-1-13.html">에어포트 베이비 AIRPORT BABY 2014-2018 조쉬 코헨 役</a></li>
-      <li><a href="1-1-12.html">에드거 앨런 포 EDGAR ALLAN POE 2016 에드거 앨런 포 役</a></li>
-      <li><a href="1-1-11.html">트레이스 유 TRACE U 2016 이우빈 役</a></li>
-      <li><a href="1-1-10.html">씨 왓 아이 워너 씨 SEE WHAT I WANNA SEE 2015-2016 강도/기자 役</a></li>
-      <li><a href="1-1-09.html">넥스트 투 노멀 NEXT TO NORMAL 2011,2015 게이브 役</a></li>
-      <li><a href="1-1-08.html">지저스 크라이스트 수퍼스타 JESUS CHRIST SUPERSTAR 2015 유다/지저스 役</a></li>
-      <li><a href="1-1-07.html">가야십이지곡 2015 우륵 役</a></li>
-      <li><a href="1-1-06.html">어쌔신 ASSASSINS 2012 발라디어/오스왈드 役</a></li>
-      <li><a href="1-1-05.html">비지터 VISITOR 2012 손님/사냥꾼/술집주인 役</a></li>
-      <li><a href="1-1-04.html">스프링 어웨이크닝 SPRING AWAKENING 2011 게오르그 役</a></li>
-      <li><a href="1-1-03.html">남한산성 2010 정명수 役</a></li>
-      <li><a href="1-1-02.html">헤어스프레이 HAIRSPRAY 2009 씨위드 役</a></li>
-      <li><a href="1-1-01.html">렌트 RENT 2009 톰 콜린스 役</a></li>
-    </ul>
+  <div id="list">
+    <p><h3>Musical</h3>
+      <ul>
+        <li><a href="1-1-28.html">마틸다 MATILDA 2022 트런치불 役</a></a></li>
+        <li><a href="1-1-27.html">킹키 부츠 KINKY BOOTS 2022 롤라 役</a></a></li>
+        <li><a href="1-1-26.html">아이다 AIDA 2022 라다메스 役</a></a></li>
+        <li><a href="1-1-25.html">썸씽 로튼 SOMETHING ROTTEN 2022 셰익스피어 役</a></a></li>
+        <li><a href="1-1-24.html">하데스타운 HADESTOWN 2021 헤르메스 役</a></a></li>
+        <li><a href="1-1-23.html">시카고 CHICAGO 2021 빌리 플린 役</a></a></li>
+        <li><a href="1-1-22.html">젠틀맨스 가이드 GENTLEMAN'S GUIDE_TO LOVE AND MURDER 2020 다이스퀴스 役</a></a></li>
+        <li><a href="1-1-21.html">에어포트 베이비 AIRPORT BABY 2020 조쉬 코헨 役</a></a></li>
+        <li><a href="1-1-20.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></a></li>
+        <li><a href="1-1-19.html">킹키 부츠 KINKY BOOTS 2019 롤라 役</a></a></li>
+        <li><a href="1-1-18.html">아이다 AIDA 2019 라다메스 役</a></li>
+        <li><a href="1-1-17.html">시티 오브 엔젤 CITY OF ANGELS 2019 스타인 役</a></li>
+        <li><a href="1-1-16.html">마틸다 MATILDA 2018-2019 트런치불 役</a></li>
+        <li><a href="1-1-15.html">노트르담 드 파리 NOTRE-DAME DE PARIS 2018-2019 그랭구와르 役</a></li>
+        <li><a href="1-1-14.html">킹키 부츠 KINKY BOOTS 2017-2018 ​롤라 役</a></li>
+        <li><a href="1-1-13.html">에어포트 베이비 AIRPORT BABY 2014-2018 조쉬 코헨 役</a></li>
+        <li><a href="1-1-12.html">에드거 앨런 포 EDGAR ALLAN POE 2016 에드거 앨런 포 役</a></li>
+        <li><a href="1-1-11.html">트레이스 유 TRACE U 2016 이우빈 役</a></li>
+        <li><a href="1-1-10.html">씨 왓 아이 워너 씨 SEE WHAT I WANNA SEE 2015-2016 강도/기자 役</a></li>
+        <li><a href="1-1-09.html">넥스트 투 노멀 NEXT TO NORMAL 2011,2015 게이브 役</a></li>
+        <li><a href="1-1-08.html">지저스 크라이스트 수퍼스타 JESUS CHRIST SUPERSTAR 2015 유다/지저스 役</a></li>
+        <li><a href="1-1-07.html">가야십이지곡 2015 우륵 役</a></li>
+        <li><a href="1-1-06.html">어쌔신 ASSASSINS 2012 발라디어/오스왈드 役</a></li>
+        <li><a href="1-1-05.html">비지터 VISITOR 2012 손님/사냥꾼/술집주인 役</a></li>
+        <li><a href="1-1-04.html">스프링 어웨이크닝 SPRING AWAKENING 2011 게오르그 役</a></li>
+        <li><a href="1-1-03.html">남한산성 2010 정명수 役</a></li>
+        <li><a href="1-1-02.html">헤어스프레이 HAIRSPRAY 2009 씨위드 役</a></li>
+        <li><a href="1-1-01.html">렌트 RENT 2009 톰 콜린스 役</a></li>
+      </ul>
+    </div>
+  </div>
 
     <p>
       <div id="disqus_thread"></div>
