--- a/1-2.html
+++ b/1-2.html
@@ -15,44 +15,41 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-  <style>
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-  </style>
+
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
+  <div id="grid">
+    <div id="index">
+      <ol>
+        <a href="1.html"><li>Career</li></a>
+        <a href="2.html"><li>Awards</li></a>
+        <a href="3.html"><li>Contact</li></a>
+      </ol>
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
+      <h2 style="margin-top:45px;">Career</h2>
 
-  <h2 style="margin-top:45px;">Career</h2>
-  <u>since 2009.01.09</u>
+      <ul>
+        <a href="1-1.html"><li>Musical</li></a>
+        <a href="1-2.html" style="color:red"><li>Play</li></a>
+        <a href="1-3.html"><li>Opera</li></a>
+        <a href="1-4.html"><li>TV</li></a>
+        <a href="1-5.html"><li>Concert</li></a>
+      </ul>
+    </div>
 
-  <ul>
-    <a href="1-1.html"><li>Musical</li></a>
-    <a href="1-2.html" style="color:red"><li>Play</li></a>
-    <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html"><li>TV</li></a>
-    <a href="1-5.html"><li>Concert</li></a>
-  </ul>
-
-  <p><h3>Play</h3>
-    <ul>
-      <li>타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役</li>
-      <li>안티고네 ANTIGONE 2016 경비병3 役</li>
-      <li>유령 GHOSTS 2014 만데스 목사 役</li>
-    </ul>
-  </p>
+    <div id="list">
+      <p><h3>Play</h3>
+        <ul>
+          <li>타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役</li>
+          <li>안티고네 ANTIGONE 2016 경비병3 役</li>
+          <li>유령 GHOSTS 2014 만데스 목사 役</li>
+        </ul>
+      </p>
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
