--- a/1.html
+++ b/1.html
@@ -16,52 +16,30 @@
     </script>
   </p>
 
-  <style>
-    a {
-      color: black;
-      text-decoration: none;
-    }
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-
-    ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0;
-      padding:30px;
-    }
-    body {
-      margin:0;
-    }
-  </style>
-
+  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home">
+  <div id="grid">
+    <ol>
+      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
+      <a href="2.html"><li>Awards</li></a>
+      <a href="3.html"><li>Contact</li></a>
+    </ol>
 
-  <ol>
-    <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html"><li>Contact</li></a>
-  </ol>
-
-  <h2 style="margin-top:45px;">Career</h2>
-  <u>since 2009.01.09</u>
-
-  <ul>
-    <a href="1-1.html"><li>Musical</li></a>
-    <a href="1-2.html"><li>Play</li></a>
-    <a href="1-3.html"><li>Opera</li></a>
-    <a href="1-4.html"><li>TV</li></a>
-    <a href="1-5.html"><li>Concert</li></a>
-  </ul>
+    <div id="content">
+      <h2>Career</h2>
+      <u>since 2009.01.09</u>
+      <ul>
+        <a href="1-1.html"><li>Musical</li></a>
+        <a href="1-2.html"><li>Play</li></a>
+        <a href="1-3.html"><li>Opera</li></a>
+        <a href="1-4.html"><li>TV</li></a>
+        <a href="1-5.html"><li>Concert</li></a>
+      </ul>
+    </div>
+  </div>
 
 
   <p>
