--- a/3.html
+++ b/3.html
@@ -16,48 +16,27 @@
     </script>
   </p>
 
-  <style>
-    a {
-      color:black;
-      text-decoration:none;
-    }
-    h1 {
-      font-size:60px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-
-    ol {
-      border-right:1px solid gray;
-      width:100px;
-      margin:0;
-      padding:30px;
-    }
-    body {
-      margin:0;
-    }
-  </style>
-
+  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <a href="https://www.zevchoi.com/home">
 
-  <ol>
-    <a href="1.html"><li>Career</li></a>
-    <a href="2.html"><li>Awards</li></a>
-    <a href="3.html" style="color:red;text-decoration:underline;"><li>Contact</li></a>
-  </ol>
+  <div id="grid">
+    <ol>
+      <a href="1.html"><li>Career</li></a>
+      <a href="2.html"><li>Awards</li></a>
+      <a href="3.html" style="color:red;text-decoration:underline;"><li>Contact</li></a>
+    </ol>
 
-  <h2 style="margin-top:45px;">Contact</h2>
-  ​포킥스 엔터테인먼트 For Kyyks Entertainment
-  <br>경기도 성남시 분당구 황새울로 335번길 10, 멜로즈프라자 570호
-  <br>(031)701-5258
-  <br>kyyker@naver.com
-
+    <div id="content">
+      <h2>Contact</h2>
+      ​포킥스 엔터테인먼트 For Kyyks Entertainment
+      <br>경기도 성남시 분당구 황새울로 335번길 10, 멜로즈프라자 570호
+      <br>(031)701-5258
+      <br>kyyker@naver.com
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
