--- a/1-4.html
+++ b/1-4.html
@@ -37,16 +37,23 @@
         <a href="1-3.html"><li>Opera</li></a>
         <a href="1-4.html" style="color:red"><li>TV</li></a>
         <a href="1-5.html"><li>Concert</li></a>
+        <a href="1-6.html"><li>Radio</li></a>
+        <a href="1-7.html"><li>Youtube</li></a>
       </ul>
     </div>
 
     <div id="list">
       <p><h3>TV</h3>
         <ul>
-          <li>그린 마더스 클럽(JTBC DRAMA) - 재웅 役 2022</li>
+          <li><a href="1-4-10.html">그린 마더스 클럽(JTBC DRAMA) - 재웅 役 2022</a></li>
           <li>로또 싱어 (MBN) - 최종 승자 2020-2021</li>
+          <li>미스터리 음악쇼 복면가왕 (MBC) 255~258화 - 방패 役 2020</li>
+          <li><a href="1-4-7.html">불후의 명곡 Immortal Songs (KBS) 416화 2019</a></li>
+          <li>비디오스타 (MBC every1) 156화 2019</li>
+          <li>비디오스타 (MBC every1) 88화 2018</li>
+          <li><a href="1-4-4.html">불후의 명곡 Immortal Songs (KBS) 344화 2018</a></li>
           <li>세계문화기행 - 셰익스피어 편 (EBS) 2017</li>
-          <li>SNL KOREA – GUEST SINGER (tvN) 2010</li>
+          <li>SNL KOREA 시즌 1 4화 – GUEST SINGER (tvN) 2010</li>
           <li>남자의 자격 – 합창단 편(KBS) 2009</li>
         </ul>
       </p>
