--- a/1-5.html
+++ b/1-5.html
@@ -36,6 +36,8 @@
           <a href="1-3.html"><li>Opera</li></a>
           <a href="1-4.html"><li>TV</li></a>
           <a href="1-5.html" style="color:red"><li>Concert</li></a>
+          <a href="1-6.html"><li>Radio</li></a>
+          <a href="1-7.html"><li>Youtube</li></a>
         </ul>
       </div>
 
