--- a/1-7.html
+++ b/1-7.html
@@ -15,35 +15,42 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
+    <div id="grid">
+      <div id="index">
+        <ol>
+          <a href="1.html"><li>Career</li></a>
+          <a href="2.html"><li>Awards</li></a>
+          <a href="3.html"><li>Contact</li></a>
+        </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+        <h2 style="margin-top:45px;">Career</h2>
 
-      </ul>
+        <ul>
+          <a href="1-1.html"><li>Musical</li></a>
+          <a href="1-2.html"><li>Play</li></a>
+          <a href="1-3.html"><li>Opera</li></a>
+          <a href="1-4.html"><li>TV</li></a>
+          <a href="1-4.html"><li>Concert</li></a>
+          <a href="1-4.html"><li>Radio</li></a>
+          <a href="1-5.html" style="color:red"><li>Youtube</li></a>
+        </ul>
+      </div>
+
+    <div id="list">
+      <p><h3>Youtube</h3>
+        <ul>
+          <li>냉터뷰 (일일칠 - 117) 220407</li>
+          <li>정식의뢰 (모비딕 Mobidic) Ep.13</li>
+
+        </ul>
+      </p>
     </div>
   </div>
-
 
   <p>
     <div id="disqus_thread"></div>
