--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
       padding-top:30px
     }
   </style>
-
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
   <div id="main">
-    <a href="https://www.zevchoi.com/home" target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
+    <input type="button" value="night" onclick="document.querySelector('body').style.backgroundColor='black';
+    document.querySelector('body')style.color='white';">
+    <input type="button" value="day" onclick="document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body')style.color='black';">
+
+    <br><br><a href="https://www.zevchoi.com/home" target="_blank" title="배우 최재림 홈페이지">👉 공식홈페이지 바로가기 👈</a>
     <br><br><img src="Zev_index.gif" width="300">
     <br><br>date of Birth: <strong>1985.04.29</strong>
 
@@ -90,8 +94,6 @@
   </script>
   <!--End of Tawk.to Script-->
 </p>
-
-
 
 </body>
 </html>
