--- a/1-1-24.html
+++ b/1-1-24.html
@@ -15,35 +15,31 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+  <h2 style="margin-top:45px;">ZEV Career - Musical #24
+  <br>하데스타운 HADESTOWN 2021 헤르메스 役</h2>
+  <br><img src="Zev_1-24-1.png" width="300">
+  <img src="Zev_1-24-2.png" width="300">
+  <br>[기간] 2021.09.07. ~ 2022.02.27
+  <br>[장소] LG아트센터
+  <br>[기간] 2022.05.20. ~ 2022.05.29.
+  <br>[장소] 드림씨어터
+  <p>
+    <h3> Official Trailer </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3rTE2Ux6f3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 
-      </ul>
-    </div>
-  </div>
+  <p>
+    <h3> Profile </h3>
+    <img src="Zev_1-24-3.png" width="300">
+    <img src="Zev_1-24-4.png" width="300">
+    <img src="Zev_1-24-5.png" width="325">
 
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
