--- a/1-3.html
+++ b/1-3.html
@@ -37,6 +37,8 @@
         <a href="1-3.html" style="color:red"><li>Opera</li></a>
         <a href="1-4.html"><li>TV</li></a>
         <a href="1-5.html"><li>Concert</li></a>
+        <a href="1-6.html"><li>Radio</li></a>
+        <a href="1-7.html"><li>Youtube</li></a>
       </ul>
     </div>
 
