--- a/1-4-10.html
+++ b/1-4-10.html
@@ -15,35 +15,24 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+  <h2 style="margin-top:45px;">ZEV Career - TV #10
+  <br>그린 마더스 클럽(JTBC DRAMA) 2022 재웅 役</h2>
+  <br><img src="Zev_4-10-1.jpeg" width="300">
+  <br>[채널] JTBC
+  <br>[기간] 2022.04.06. ~ 2022.05.26. 16부작
+  </p>
 
-      </ul>
-    </div>
-  </div>
+  <p>
+    <h3> Profile </h3>
+    <img src="Zev_4-10-2.jpeg" width="300">
 
+
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
