--- a/1-4-7.html
+++ b/1-4-7.html
@@ -15,35 +15,18 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+  <h2 style="margin-top:45px;">ZEV Career - TV #7
+  <br>불후의 명곡 Immortal Songs (KBS) 416화</h2>
+  <br>[방영일] 2019.08.17.
+  <br><iframe width="560" height="315" src="https://www.youtube.com/embed/JmyGYyjB-eE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h3>테이&최재림 - 다 가기 전에</h3>
 
-      </ul>
-    </div>
-  </div>
-
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
