--- a/1-6.html
+++ b/1-6.html
@@ -15,35 +15,51 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <link rel="stylesheet" href="1-style.css">
+  <link rel="stylesheet" href="2-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
+    <div id="grid">
+      <div id="index">
+        <ol>
+          <a href="1.html"><li>Career</li></a>
+          <a href="2.html"><li>Awards</li></a>
+          <a href="3.html"><li>Contact</li></a>
+        </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <a href="1-1.html"><li>Musical</li></a>
-        <a href="1-2.html"><li>Play</li></a>
-        <a href="1-3.html"><li>Opera</li></a>
-        <a href="1-4.html"><li>TV</li></a>
-        <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
-        <a href="1-7.html"><li>Youtube</li></a>
+        <h2 style="margin-top:45px;">Career</h2>
 
-      </ul>
+        <ul>
+          <a href="1-1.html"><li>Musical</li></a>
+          <a href="1-2.html"><li>Play</li></a>
+          <a href="1-3.html"><li>Opera</li></a>
+          <a href="1-4.html"><li>TV</li></a>
+          <a href="1-4.html"><li>Concert</li></a>
+          <a href="1-5.html" style="color:red"><li>Radio</li></a>
+          <a href="1-7.html"><li>Youtube</li></a>
+        </ul>
+      </div>
+
+    <div id="list">
+      <p><h3>Radio</h3>
+        <ul>
+          <li>김성규의 심야아이돌 (네이버 NOW.) 220705 - 킹키부츠 팀</li>
+          <li>웬디의 영스트리트 (SBS 파워FM) 220705 - 킹키부츠 팀</li>
+          <li>두시탈출 컬투쇼 (SBS 파워FM) 220608 - 아이다 팀</li>
+          <li>최화정의 파워타임 (SBS 파워FM) 220525</li>
+          <li>두시탈출 컬투쇼 (SBS 파워FM) 211224 - 하데스타운 팀</li>
+          <li>커튼콜 (네이버 NOW.) 211110 - 하데스타운 팀</li>
+          <li>아리랑 라디오 (아리랑국제방송)210326 - 시카고 팀</li>
+          <li>웅산의 스윗 멜로디 (tbs FM) 210213</li>
+          <li>산들의 별이 빛나는 밤에 (MBC 표준FM) 200210 - 아이다 팀</li>
+          <li>두시의데이트 뮤지, 안영미입니다 (MBC FM4U) 191029 - 아이다 팀</li>
+
+
+        </ul>
+      </p>
     </div>
   </div>
-
 
   <p>
     <div id="disqus_thread"></div>
