--- a/1.html
+++ b/1.html
@@ -16,6 +16,37 @@
     </script>
   </p>
 
+  <script>
+  function nightDayHandler(self){
+    var target = document.querySelector('body');
+    if(self.value === 'night'){
+      target.style.backgroundColor = 'black';
+      target.style.color = 'white';
+      document.querySelector('h1').style.color = 'white';
+      self.value = 'day';
+
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while (i < alist.length) {
+        alist[i].style.color = 'powderblue';
+        i = i+1;
+      }
+    } else {
+      target.style.backgroundColor = 'white';
+      target.style.color = 'black';
+      document.querySelector('h1').style.color = 'black';
+      self.value = 'night';
+
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while (i < alist.length) {
+        alist[i].style.color = 'blue';
+        i = i+1;
+      }
+    }
+  }
+  </script>
+
   <link rel="stylesheet" href="1-style.css">
 </head>
 
@@ -32,32 +63,7 @@
   -->
 
   <input type="button" value="night" onclick="
-    var target = document.querySelector('body');
-    if(this.value === 'night'){
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
-      document.querySelector('h1').style.color = 'white';
-      this.value = 'day';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = 'powderblue';
-        i = i+1;
-      }
-    } else {
-      target.style.backgroundColor = 'white';
-      target.style.color = 'black';
-      document.querySelector('h1').style.color = 'black';
-      this.value = 'night';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = 'blue';
-        i = i+1;
-      }
-    }
+    nightDayHandler(this);
   ">
 
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
