--- a/2.html
+++ b/2.html
@@ -17,36 +17,42 @@
   </p>
 
   <script>
-  function nightDayHandler(self){
-    var target = document.querySelector('body');
-    if(self.value === 'night'){
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
-      document.querySelector('h1').style.color = 'white';
-      self.value = 'day';
-
+  var Links = {
+    setColor:function(color){
       var alist = document.querySelectorAll('a');
       var i = 0;
       while (i < alist.length) {
-        alist[i].style.color = 'powderblue';
-        i = i+1;
-      }
-    } else {
-      target.style.backgroundColor = 'white';
-      target.style.color = 'black';
-      document.querySelector('h1').style.color = 'black';
-      self.value = 'night';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = 'blue';
+        alist[i].style.color = color;
         i = i+1;
       }
     }
   }
+  var Body = {
+    setColor:function(color){
+      document.querySelector('body').style.color = color;
+    },
+    setBackgroundColor:function(color){
+      document.querySelector('body').style.backgroundColor = color;
+    }
+  }
+  function nightDayHandler(self){
+    var target = document.querySelector('body');
+    if(self.value === 'night'){
+      Body.setBackgroundColor('black');
+      Body.setColor('white');
+      Links.setColor('powderblue');
+      document.querySelector('h1').style.color = 'white';
+      self.value = 'day';
+    } else {
+      Body.setBackgroundColor('white');
+      Body.setColor('black');
+      document.querySelector('h1').style.color = 'black';
+      self.value = 'night';
+      Links.setColor('blue');
+    }
+  }
   </script>
-  
+
   <link rel="stylesheet" href="1-style.css">
 </head>
 
