--- a/3.html
+++ b/3.html
@@ -17,32 +17,38 @@
   </p>
 
   <script>
+  var Links = {
+    setColor:function(color){
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while (i < alist.length) {
+        alist[i].style.color = color;
+        i = i+1;
+      }
+    }
+  }
+  var Body = {
+    setColor:function(color){
+      document.querySelector('body').style.color = color;
+    },
+    setBackgroundColor:function(color){
+      document.querySelector('body').style.backgroundColor = color;
+    }
+  }
   function nightDayHandler(self){
     var target = document.querySelector('body');
     if(self.value === 'night'){
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
+      Body.setBackgroundColor('black');
+      Body.setColor('white');
+      Links.setColor('powderblue');
       document.querySelector('h1').style.color = 'white';
       self.value = 'day';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = 'powderblue';
-        i = i+1;
-      }
     } else {
-      target.style.backgroundColor = 'white';
-      target.style.color = 'black';
+      Body.setBackgroundColor('white');
+      Body.setColor('black');
+      Links.setColor('blue');
       document.querySelector('h1').style.color = 'black';
       self.value = 'night';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = 'blue';
-        i = i+1;
-      }
     }
   }
   </script>
