--- a/1-1-18.html
+++ b/1-1-18.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>ZEV - Contact</title>
+  <title>ZEV - Career</title>
   <meta charset="utf-8">
   <p>
     <!-- Google tag (gtag.js) -->
@@ -15,36 +15,27 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-
-  <script src="colors-1.js"> </script>
-
-  <link rel="stylesheet" href="1-style.css">
 </head>
 
 <body>
-  <input type="button" value="night" onclick="
-    nightDayHandler(this);
-  ">
-
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <div id="grid">
-    <ol>
-      <a href="1.html"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html" style="color:red;text-decoration:underline;"><li>Contact</li></a>
-    </ol>
+  <h2 style="margin-top:45px;">ZEV Career - Musical #18
+  <br>아이다 AIDA 2019 라다메스 役</h2>
+  <br><img src="Zev_1-18-1.png" width="300">
+  <img src="Zev_1-18-2.jpeg" width="300">
+  <br>[기간] 2019.11.16. ~ 2020.02.23.
+  <br>[장소] 블루스퀘어 인터파크홀
+  <p>
+    <h3> Official Trailer </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tnDhm_6QFVw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+  </p>
 
-    <div id="content">
-      <h2>Contact</h2>
-      ​포킥스 엔터테인먼트 For Kyyks Entertainment
-      <br>경기도 성남시 분당구 황새울로 335번길 10, 멜로즈프라자 570호
-      <br>(031)701-5258
-      <br>kyyker@naver.com
-    </div>
-  </div>
+  <p>
+    <h3> Profile </h3>
+    <img src="Zev_1-18-3.png" width="300">
+    <img src="Zev_1-18-4.png" width="300">
+  </p>
 
   <p>
     <div id="disqus_thread"></div>
@@ -83,6 +74,7 @@
     </script>
     <!--End of Tawk.to Script-->
   </p>
+
 
 </body>
 </html>
