--- a/1.html
+++ b/1.html
@@ -15,59 +15,9 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-
-  <script>
-  var Links = {
-    setColor:function(color){
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = color;
-        i = i+1;
-      }
-    }
-  }
-  var Body = {
-    setColor:function(color){
-      document.querySelector('body').style.color = color;
-    },
-    setBackgroundColor:function(color){
-      document.querySelector('body').style.backgroundColor = color;
-    }
-  }
-  /*function Links.setColor(color){
-    var alist = document.querySelectorAll('a');
-    var i = 0;
-    while (i < alist.length) {
-      alist[i].style.color = color;
-      i = i+1;
-    }
-  }
-  function Body.setColor(color){
-    document.querySelector('body').style.color = color;
-  }
-  function Body.setBackgroundColor(color){
-    document.querySelector('body').style.backgroundColor = color;
-  }
-  */
-  function nightDayHandler(self){
-    var target = document.querySelector('body');
-    if(self.value === 'night'){
-      document.querySelector('h1').style.color = 'white';
-      self.value = 'day';
-      Body.setBackgroundColor('black');
-      Body.setColor('white');
-      Links.setColor('powderblue');
-
-    } else {
-      document.querySelector('h1').style.color = 'black';
-      self.value = 'night';
-      Body.setBackgroundColor('white');
-      Body.setColor('black');
-      Links.setColor('blue');
-    }
-  }
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  
+  <script src="colors-1.js"> </script>
 
   <link rel="stylesheet" href="1-style.css">
 </head>
