--- a/2.html
+++ b/2.html
@@ -16,42 +16,9 @@
     </script>
   </p>
 
-  <script>
-  var Links = {
-    setColor:function(color){
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = color;
-        i = i+1;
-      }
-    }
-  }
-  var Body = {
-    setColor:function(color){
-      document.querySelector('body').style.color = color;
-    },
-    setBackgroundColor:function(color){
-      document.querySelector('body').style.backgroundColor = color;
-    }
-  }
-  function nightDayHandler(self){
-    var target = document.querySelector('body');
-    if(self.value === 'night'){
-      Body.setBackgroundColor('black');
-      Body.setColor('white');
-      Links.setColor('powderblue');
-      document.querySelector('h1').style.color = 'white';
-      self.value = 'day';
-    } else {
-      Body.setBackgroundColor('white');
-      Body.setColor('black');
-      document.querySelector('h1').style.color = 'black';
-      self.value = 'night';
-      Links.setColor('blue');
-    }
-  }
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+  <script src="colors-1.js"> </script>
 
   <link rel="stylesheet" href="1-style.css">
 </head>
